compiler/typ/tests/fixtures/diagnostics/0896_gadt_equality_cast_mismatch_04.ml.infer.expected
File "0896_gadt_equality_cast_mismatch_04.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0896_gadt_equality_cast_mismatch_04 is not a valid module name.

File "0896_gadt_equality_cast_mismatch_04.ml", line 7, characters 20-24:
7 |     | Refl_delta -> true
                        ^^^^
Error: The constructor true has type bool
       but an expression was expected of type b = a
